[package]
name = "godot-logger"
version = "1.0.0"
edition = "2018"

description = "A logger for godot-rust projects that prints logs using the godot_print! macro"
repository = "https://github.com/jdno/godot-logger"
license = "MIT OR Apache-2.0"
keywords = [
    "gamedev",
    "godot",
    "log"
]
categories = [
    "development-tools::debugging"
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { git = "https://github.com/chronotope/chrono.git", "rev" = "d147e9a" }
gdnative-core = "0.11"
log = "0.4"
log4rs = { version = "1.2.0", default-features = false }

[dev-dependencies]
gdnative = "0.11"
